cluster/apps/nginx-spacemule/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-spacemule-service
spec:
  type: ClusterIP
  selector:
    app: nginx-spacemule
  ports:
    - name: nginx-spacemule-service
      protocol: TCP
      port: 80
      targetPort: nginx-http
